Remove the deprecated image field (#1498)
